--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
-@import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.p {
+  padding: 24px;
+}
+
