--- a/src/app/components/common/nav/nav.component.html
+++ b/src/app/components/common/nav/nav.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row fxLayout="row" fxLayoutGap="24px">
     <span>PRIOR BANK</span>
-    <a mat-button href="/home">Home</a>
-    <a mat-button href="/client">Client</a>
-    <a mat-button href="/bank-program">Bank Programs</a>
-    <a mat-button href="/deposit">Deposit</a>
-    <a mat-button href="/credit">Credit</a>
-    <button mat-button (click)="closeBankDay()">Close Bank Day</button>
+    <a mat-raised-button color="primary" href="/home">Home</a>
+    <a mat-raised-button color="primary" href="/client">Client</a>
+    <a mat-raised-button color="primary" href="/bank-program">Bank Programs</a>
+    <a mat-raised-button color="primary" href="/deposit">Deposit</a>
+    <a mat-raised-button color="primary" href="/credit">Credit</a>
+    <button mat-raised-button  color="primary" (click)="closeBankDay()">Close Bank Day</button>
     <div fxFlex></div>
     <a mat-button href="https://github.com/polina-krukovich/bank">
       <img src="assets/images/github.png" width="28" height="28">
